# askg

./: .askg.pid  .coverage  .coverage.Maxs-MacBook-Air-M3-2.local.19995.XKWOhQUx  .gitignore  .pre-commit-config.yaml  .release-names  .tool-versions  LANGGRAPH_ORCHESTRATOR.md  MCPMARKET_INTEGRATION.md  PRESENTATION.md  README.md  SCALE_IMPROVEMENT_PLAN.md  SCALE_IMPROVEMENT_RESULTS.md  check_neo4j_server_count.py  config.example.yaml  debug_scrapers.py  deduplication.py  done1.txt  lint.sh  neo4j_integration.py  pyproject.toml  requirements.txt  ruff.toml  run_deduplication.py  scale_assessment.py  scrapers.py  setup-precommit.sh  setup.sh  start.sh  stop.sh  test.sh  test_config.py  test_config_detection.py  test_fast.sh  test_fast_loading.py  test_glama_detailed.py  test_global_ids.py
.github/workflows/: mcp-tests.yml  run-tests.yml  test.yml
HOWTO/: PROGRESS_BARS.md
docs/: ASSESSMENT_SUMMARY.md  FRONTEND_CHAT_INTERFACE.md  NEO4J_INSTANCES.md  PROJECT_STRUCTURE.md  RECENT_UPDATES.md  TEXT2CYPHER_SETUP.md
docs/Claude.md/: Agent-Server Knowledge Graph
frontend/: README.md  package-lock.json  package.json  test_clean_startup.html
frontend/public/: app.js  index.html  styles.css
frontend/src/: index.ts
mcp/: README.md  __init__.py  client_example.py  mcp_server.py  requirements.txt  run_tests.py  server.py  test_basic.py  test_config.py  test_environment.py  test_file_structure.py  test_imports.py  test_imports_simple.py  test_mcp_server.py  test_requirements.py  test_yaml.py
src/: analyze_deduplication.py  debug_scrapers.py  deduplication.py  glama_downloader.py  id_standardization.py  langgraph_orchestrator.py  load_to_neo4j.py  main.py  master_data.py  models.py  neo4j_integration.py  run_deduplication.py  run_full_deduplication.py  run_sample_deduplication.py  scale_assessment.py  scrapers.py  text2cypher.py
src/askg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_chat_improvements.html  test_ci_config.py  test_ci_setup.py  test_config.py  test_config_detection.py  test_config_file.py  test_crypto_integration.py  test_crypto_queries.py  test_cypher_cleaning.py  test_direct_glama.py  test_fallback_query.py  test_fast_loading.py  test_global_ids.py  test_graph_improvements.html  test_mcp_search.py  test_orchestrator.py  test_text2cypher.py  test_text2cypher_integration.py  test_uv_environment.py
tools/: README.md  check_neo4j_server_count.py
