[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askg"
version = "0.1.0"
description = "Agent-Server Knowledge Graph"
authors = [{name = "ASKG Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "neo4j>=5.0.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "langgraph>=0.0.40",
    "langchain-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mcp>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--color=yes",
    "--durations=10"
] 